--- a/SourceGit/UI/Dashboard.xaml
+++ b/SourceGit/UI/Dashboard.xaml
@@ -7,7 +7,8 @@
              xmlns:local="clr-namespace:SourceGit.UI"
              xmlns:converters="clr-namespace:SourceGit.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Unloaded="Cleanup">
     <UserControl.Resources>
         <RoutedUICommand x:Key="OpenSearchBarCommand" Text="OpenSearchBar"/>
         <RoutedUICommand x:Key="HideSearchBarCommand" Text="HideSearchBar"/>
